--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pitches</title>
+
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{{url_for('static', filename = 'img/favicon.ico')}}" type="image/x-icon">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&family=Poppins:wght@200;300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top" role="navigation">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#right-items" >
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                
+            </button>
+            <a class="navbar-brand" href="/">
+                <i class="bi bi-chat-fill"></i>
+                <span>PITCHES</span>
+            </a>
+
+            <!-- Right links -->
+            <div id="right-items" class="navbar-collapse collapse">
+                <ul class="navbar-nav ms-auto d-flex flex-row">
+                    <li class="nav-item">
+                        <a class="nav-link" href="">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">LOG OUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">PITCHES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">PROFILE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">LOGIN</a>
+                    </li>
+                </ul>
+            </div>
+            
+        </div>
+    </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
