--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,12 +24,10 @@
 <body>
     <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top" role="navigation">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#right-items" >
-                <span class="sr-only"></span>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#right-items" aria-controls="right-items" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                
             </button>
             <a class="navbar-brand" href="/">
                 <i class="bi bi-chat-fill"></i>
@@ -38,7 +36,7 @@
 
             <!-- Right links -->
             <div id="right-items" class="navbar-collapse collapse">
-                <ul class="navbar-nav ms-auto d-flex flex-row">
+                <ul class="nav navbar-nav flex">
                     <li class="nav-item">
                         <a class="nav-link" href="">HOME</a>
                     </li>
