--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@ Homepage
         </div>
     </div>
     <div class="one"></div>
-    <a href="{{url_for('auth.login')}}"><button class="btn btn-primary">Add Pitch</button></a>
+    <a href="{{url_for('auth.login')}}"><button class="btn btn-primary add">Add Pitch</button></a>
 </div>
 
 {% endblock %}
