--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pitches</title>
-
+    
     <!-- font awesome  -->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
@@ -20,9 +19,66 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css" rel="stylesheet" />
+    <!-- css  -->
+    {% block css %}
+    {% endblock %}
+
+    <!-- js -->
+    {% block script %}
+    {% endblock %}
+    
+    {% extends 'bootstrap/base.html' %}
+    {% block title %}
+    <title>pitches</title>
+    {% endblock %}
+
 </head>
 <body>
-    <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top" role="navigation">
+    {% block navbar %}
+
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"> 
+                    <i class="bi bi-chat-fill">PITCHES</i>
+                </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav pull-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">LOG OUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">PITCHES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">PROFILE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">LOGIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">SIGN UP</a>
+                    </li>
+            </div>
+
+        </div>
+    </div>
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+    
+    <!-- <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top" role="navigation">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#right-items" aria-controls="right-items" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="icon-bar"></span>
@@ -34,7 +90,7 @@
                 <span>PITCHES</span>
             </a>
 
-            <!-- Right links -->
+            Right links
             <div id="right-items" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav flex">
                     <li class="nav-item">
@@ -56,7 +112,7 @@
             </div>
             
         </div>
-    </nav>
+    </nav> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
