--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,1 +1,32 @@
+{% extends 'auth/auth-base.html' %}
+{%block css%}
+<link rel="stylesheet" href="{{url_for('static', filename = 'css/login.css')}}">
+{% endblock %}
+{%block title%}
+  Authentication
+{% endblock %}
 
+{%  block content %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+<div class="container"> 
+  <div class="row">
+    <div class= "col-md-2"> </div>
+    <div class="col-md-8">
+    <!--Flash message -->
+    {% for message in get_flashed_messages() %}
+      <div class="alert alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      {{ message }}
+      </div>
+    {% endfor %}
+    <!-- Login form -->
+    {{wtf.quick_form(login_form)}}
+    <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
+   </div>
+   <div clas="col-md-2"> </div>
+  </div>
+</div>
+
+
+{% endblock %}
