--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends 'auth/auth-base.html' %}
+{% extends 'base.html' %}
 {%block css%}
 <link rel="stylesheet" href="{{url_for('static', filename = 'css/login.css')}}">
 {% endblock %}
