fix-style- optimized home page styles

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
             <p>Enjoy!!!</p>
         </div>
         <div class="col-md-7">
-            <img src="{{url_for('static', filename='img/pitch.png')}}" alt="">
+            <img class="img-responsive" src="{{url_for('static', filename='img/pitch.png')}}" alt="">
         </div>
     </div>
     <div class="one"></div>
