--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -8,8 +8,8 @@ p{
 }
 
 img{
-    width: 600px;
-    height: 600px;
+    width: 550px;
+    height: 650px;
 }
 .content h1{
     font-weight: 900;
@@ -21,20 +21,20 @@ img{
 }
 .one, .two {
     position: absolute;
+    background-color: rgb(195, 142, 245);
 }
 .one{
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    left: 310px;
+    left: 18%;
     z-index: -1;
-    bottom: -20px;
 }
 .two {
     position: relative;
     height: 70px;
     width: 600px;
-
+    background-color: blueviolet;
 }
 .two::before{
     content: "";
@@ -62,6 +62,7 @@ a.add {
     padding: 2rem 6rem;
     margin: 3rem 0;
     opacity: 1;
+    background-color: antiquewhite;
     font-size: 2rem;
     font-weight: 900;
     transition: 0.3s;
@@ -69,5 +70,6 @@ a.add {
 a.add:hover{
     border: 3px solid #A2DBFA;
     background-color: transparent;
-    color: black;
+    color: white;
 }
+
