--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css" rel="stylesheet" />
     <!-- css  -->
     {% block css %}
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     {% endblock %}
 
     <!-- js -->
@@ -36,87 +37,53 @@
 <body>
     {% block navbar %}
 
-    <div class="navbar navbar-inverse" role="navigation">
+    <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <!-- Container wrapper -->
         <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/"> 
-                    <i class="bi bi-chat-fill">PITCHES</i>
-                </a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav pull-right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('main.index')}}">HOME</a>
-                    </li>
-                    {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('auth.logout')}}"><i class="bi bi-logout"></i> LOG OUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('main.pitches')}}"><i class="bi bi-chat-0"></i> PITCHES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('main.profile', username=current_user.username)}}"><i class="bi bi-person"></i> PROFILE</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('auth.login')}}">LOGIN</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('auth.register')}}">SIGN UP</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
+          <!-- Toggle button -->
+          <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#links"
+            aria-controls="links" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
 
+          <!-- Brand -->
+          <a class="navbar-brand" href="/">
+            <i class="bi bi-chat-fill">PITCHES</i>
+          </a>
+          
+          <!-- Right links -->
+            <ul class="navbar-nav ms-auto d-flex flex-row" >
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.index')}}">HOME</a>
+                </li>
+                {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('auth.logout')}}"><i class="bi bi-logout"></i> LOG OUT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.pitches')}}"><i class="bi bi-chat-0"></i> PITCHES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.profile', username=current_user.username)}}"><i class="bi bi-person"></i> PROFILE</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('auth.login')}}">LOGIN</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('auth.register')}}">SIGN UP</a>
+                </li>
+                {% endif %}
+            </ul>
         </div>
-    </div>
+        <!-- Container wrapper -->
+      </nav>
     {% endblock %}
 
     {% block content %}
     {% endblock %}
     
-    <!-- <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top" role="navigation">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#right-items" aria-controls="right-items" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">
-                <i class="bi bi-chat-fill"></i>
-                <span>PITCHES</span>
-            </a>
-
-            Right links
-            <div id="right-items" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav flex">
-                    <li class="nav-item">
-                        <a class="nav-link" href="">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">LOG OUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">PITCHES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">PROFILE</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">LOGIN</a>
-                    </li>
-                </ul>
-            </div>
-            
-        </div>
-    </nav> -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
