--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,7 +10,8 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 <div class="container"> 
-  <div class="row">
+  <div class="card">
+    <br>
     <div class= "col-md-2"> </div>
     <div class="col-md-8">
     <!--Flash message -->
@@ -22,6 +23,7 @@
     {% endfor %}
     <!-- Login form -->
     {{wtf.quick_form(login_form)}}
+    <br><br>
     <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
    </div>
    <div clas="col-md-2"> </div>
