--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -7,7 +7,8 @@
 
 {% block content %}
 <div class="container">
-    {% with messages = get_flashed_messages() %}
+    <div class="card">
+        {% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-warning alert-dismissible" role="alert">
@@ -27,6 +28,8 @@
         </div>
         <div class="col-md-2"></div>
     </div>
+    </div>
+    
 </div>
 
 {% endblock%}
