--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="one"></div>
-    <a href="{{url_for('auth.login')}}"><button class="btn btn-primary add">Add Pitch</button></a>
+    <a href="{{url_for('main.pitches')}}"><button class="btn btn-primary add">Add Pitch</button></a>
 </div>
 
 {% endblock %}
