--- a/app/templates/pitches.html
+++ b/app/templates/pitches.html
@@ -5,9 +5,6 @@
 <link rel="stylesheet" href="{{url_for('static', filename = 'css/pitches.css')}}">
 {% endblock %}
 
-{% block title %}
-pitches
-{% endblock %}
 
 {% block content%}
 
@@ -17,11 +14,11 @@ pitches
             <div class="pitch-head">
                 <h1>Write Your Pitch Here</h1>
                 <div class="pitch-content">
-                    {% for %}
-                    <h5>{{}}</h5>
-                    <p>{{}}</p>
-                    <a href="{{}}"><i class="bi bi-hand-thumbs-up"></i></a><span class="custom">{{}}</span>
-                    <a href="{{}}"><i class="bi bi-hand-thumbs-down"></i></a><span class="custom">{{}}</span>
+                    {% for post in posts %}
+                    <h5>{{post.pitch}}</h5>
+                    <p>{{post.name}}</p>
+                    <a href="{{url_for('main.like', id = post.id)}}"><i class="bi bi-hand-thumbs-up"></i></a><span class="custom">{{post.likes.count()}}</span>
+                    <a href="{{url_for('main.dislike', id = post.id)}}"><i class="bi bi-hand-thumbs-down"></i></a><span class="custom">{{post.dislikes.count()}}</span>
                     <hr>
                     <a href="">Add Comment</a>
                     <br><br>
